Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -421,5 +421,6 @@
   "dn16:2.18.1": "Liććhavī su se vozili kočijama dokle je to bilo moguće, a onda siđoše i peške otidoše do Blaženoga. Kada su stigli, pokloniše mu se, pa sedoše sa strane.",
   "dn16:2.18.2": "Dok su tako sedeli, Blaženi ih uputi, podstaknu, nadahnu i ohrabri govorom o Dhammi.",
   "dn16:2.18.3": "Onda mladi Liććhavī reče Blaženom:",
-  "dn16:2.18.4": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite naš poziv za sutrašnji obrok.”"
+  "dn16:2.18.4": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite naš poziv za sutrašnji obrok.”",
+  "dn16:2.18.5": "Ali Blaženi odgovori:"
 }
