--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -423,5 +423,6 @@
   "dn16:2.18.3": "Onda mladi Liććhavī reče Blaženom:",
   "dn16:2.18.4": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite naš poziv za sutrašnji obrok.”",
   "dn16:2.18.5": "Ali Blaženi odgovori:",
-  "dn16:2.18.6": "„Liććhavī, već sam prihvatio poziv kurtizane Ambapāli za sutrašnji obrok.”"
+  "dn16:2.18.6": "„Liććhavī, već sam prihvatio poziv kurtizane Ambapāli za sutrašnji obrok.”",
+  "dn16:2.18.7": "Na to Liććhavī pljesnuše rukama:"
 }
