--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -428,5 +428,6 @@
   "dn16:2.18.8": "„Ah, izigrala nas je ta javna žena, porazila nas je ta javna žena!”",
   "dn16:2.18.9": "Potom oni iskazaše svoje zadovoljstvo i radost zbog govora o Dhammi, ustadoše sa mesta na kojem su sedeli i pošto su se poklonili Blaženom, udaljiše se, pazeći da im on ostane sa desne strane.",
   "dn16:2.19.1": "A kurtizana Ambapāli dade da se u njenom gaju pripreme različita ukusna jela i mnogo poslastica, pa poruči Blaženom:",
-  "dn16:2.19.2": "„Vreme je, poštovani gospodine, obrok je spreman.”"
+  "dn16:2.19.2": "„Vreme je, poštovani gospodine, obrok je spreman.”",
+  "dn16:2.19.3": "A Blaženi se ujutro obukao, uze svoju prosjačku zdelu i gornji ogrtač, pa zajedno praćen monasima krenu put doma kurtizane Ambapāli i tamo sede na pripremljeno mesto."
 }
