--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -432,5 +432,6 @@
   "dn16:2.19.3": "A Blaženi se ujutro obukao, uze svoju prosjačku zdelu i gornji ogrtač, pa zajedno praćen monasima krenu put doma kurtizane Ambapāli i tamo sede na pripremljeno mesto.",
   "dn16:2.19.4": "Onda Ambapāli svojim rukama posluži i različitim vrstama jela ugosti monašku zajednicu predvođenu Blaženim.",
   "dn16:2.19.5": "Kad je Blaženi jeo i izvadio ruke iz činije, Ambapālia sede na niže mesto, sa strane.",
-  "dn16:2.19.6": "Dok je tako sedela, reče ona Blaženom:"
+  "dn16:2.19.6": "Dok je tako sedela, reče ona Blaženom:",
+  "dn16:2.19.7": "„Poštovani gospodine, želela bih da svoj gaj poklonim monaškoj zajednici predvođenoj Blaženim.”"
 }
