Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -434,5 +434,6 @@
   "dn16:2.19.5": "Kad je Blaženi jeo i izvadio ruke iz činije, Ambapālia sede na niže mesto, sa strane.",
   "dn16:2.19.6": "Dok je tako sedela, reče ona Blaženom:",
   "dn16:2.19.7": "„Poštovani gospodine, želela bih da svoj gaj poklonim monaškoj zajednici predvođenoj Blaženim.”",
-  "dn16:2.19.8": "I prihvati Blaženi ovaj dar."
+  "dn16:2.19.8": "I prihvati Blaženi ovaj dar.",
+  "dn16:2.19.9": "Na kraju je uputi, podstaknu, nadahnu i ohrabri svojim govorom o Dhammi, te ustade i udalji se."
 }
