--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -438,5 +438,6 @@
   "dn16:2.19.9": "Na kraju je uputi, podstaknu, nadahnu i ohrabri svojim govorom o Dhammi, te ustade i udalji se.",
   "dn16:2.20.1": "Dok je živeo kraj Vesālija, u Ambalātikinom mangovom gaju, Blaženi je često govorio monasima o Dhammi:",
   "dn16:2.20.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:2.20.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:2.20.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:2.20.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
