Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -439,5 +439,6 @@
   "dn16:2.20.1": "Dok je živeo kraj Vesālija, u Ambalātikinom mangovom gaju, Blaženi je često govorio monasima o Dhammi:",
   "dn16:2.20.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:2.20.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
-  "dn16:2.20.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
+  "dn16:2.20.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
+  "dn16:2.20.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
 }
