Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -440,5 +440,6 @@
   "dn16:2.20.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:2.20.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
   "dn16:2.20.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
-  "dn16:2.20.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
+  "dn16:2.20.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
+  "dn16:2.20.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”"
 }
