--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -442,5 +442,6 @@
   "dn16:2.20.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:2.20.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:2.20.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
-  "dn16:2.21.0": "12. Približavanje vasse u selu Veluva"
+  "dn16:2.21.0": "12. Približavanje vasse u selu Veluva",
+  "dn16:2.21.1": "Kada je ostao u Ambalātikinom gaju koliko je želeo, Blaženi reče poštovanom Ānandi:"
 }
