Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -444,5 +444,6 @@
   "dn16:2.20.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:2.21.0": "12. Približavanje vasse u selu Veluva",
   "dn16:2.21.1": "Kada je ostao u Ambalātikinom gaju koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:2.21.2": "„Hajde, Ānanda, idemo do sela Veḷuva.”"
+  "dn16:2.21.2": "„Hajde, Ānanda, idemo do sela Veḷuva.”",
+  "dn16:2.21.3": "„Da, poštovani gospodine,” odgovori Ānanda."
 }
