Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -446,5 +446,5 @@
   "dn16:2.21.1": "Kada je ostao u Ambalātikinom gaju koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:2.21.2": "„Hajde, Ānanda, idemo do sela Veḷuva.”",
   "dn16:2.21.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
-  "dn16:2.21.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Veḷuvu i u njoj se smestio."
+  "dn16:2.21.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Veḷuvu "
 }
