Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -447,5 +447,6 @@
   "dn16:2.21.2": "„Hajde, Ānanda, idemo do sela Veḷuva.”",
   "dn16:2.21.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:2.21.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Veḷuvu ",
-  "dn16:2.21.5": "i u njoj se smestio."
+  "dn16:2.21.5": "i u njoj se smestio.",
+  "dn16:2.22.1": "Tu on reče monasima:"
 }
