Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -449,5 +449,6 @@
   "dn16:2.21.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Veḷuvu ",
   "dn16:2.21.5": "i u njoj se smestio.",
   "dn16:2.22.1": "Tu on reče monasima:",
-  "dn16:2.22.2": "„Hajde, monasi, nađite u okolini Vesalija10 sebi boravište kod svojih prijatelja, svojih poznanika, svojih sledbenika."
+  "dn16:2.22.2": "„Hajde, monasi, nađite u okolini Vesalija10 sebi boravište kod svojih prijatelja, svojih poznanika, svojih sledbenika.",
+  "dn16:2.22.3": "A ja ću ceo period monsuna provesti u Beḷuvi.”"
 }
