Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -452,5 +452,6 @@
   "dn16:2.22.2": "„Hajde, monasi, nađite u okolini Vesalija10 sebi boravište kod svojih prijatelja, svojih poznanika, svojih sledbenika.",
   "dn16:2.22.3": "A ja ću ceo period monsuna provesti u Beḷuvi.”",
   "dn16:2.22.4": "Monasi se saglasiše sa tim i svako sebi pronađe boravište,",
-  "dn16:2.22.5": "dok je Blaženi ostao upravo tu, u malom selu Veḷuva."
+  "dn16:2.22.5": "dok je Blaženi ostao upravo tu, u malom selu Veḷuva.",
+  "dn16:2.23.1": "I dok je tu boravio, javiše se oštri bolovi u Blaženom, toliko snažni da je bio na ivici smrti."
 }
