Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -453,5 +453,6 @@
   "dn16:2.22.3": "A ja ću ceo period monsuna provesti u Beḷuvi.”",
   "dn16:2.22.4": "Monasi se saglasiše sa tim i svako sebi pronađe boravište,",
   "dn16:2.22.5": "dok je Blaženi ostao upravo tu, u malom selu Veḷuva.",
-  "dn16:2.23.1": "I dok je tu boravio, javiše se oštri bolovi u Blaženom, toliko snažni da je bio na ivici smrti."
+  "dn16:2.23.1": "I dok je tu boravio, javiše se oštri bolovi u Blaženom, toliko snažni da je bio na ivici smrti.",
+  "dn16:2.23.2": "Blaženi ih umiri tako što je ustalio svesnost i jasno razumevanje, tako da ga ti bolovi više nisu uznemiravali."
 }
