Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -455,5 +455,6 @@
   "dn16:2.22.5": "dok je Blaženi ostao upravo tu, u malom selu Veḷuva.",
   "dn16:2.23.1": "I dok je tu boravio, javiše se oštri bolovi u Blaženom, toliko snažni da je bio na ivici smrti.",
   "dn16:2.23.2": "Blaženi ih umiri tako što je ustalio svesnost i jasno razumevanje, tako da ga ti bolovi više nisu uznemiravali.",
-  "dn16:2.23.3": "Onda se u Blaženom javi misao:"
+  "dn16:2.23.3": "Onda se u Blaženom javi misao:",
+  "dn16:2.23.4": "„Ne bi mi priličilo ako bih ušao u konačno oslobođenje, a da prethodno to ne najavim svojim pratiocima i monaškoj zajednici."
 }
