--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -458,5 +458,6 @@
   "dn16:2.23.3": "Onda se u Blaženom javi misao:",
   "dn16:2.23.4": "„Ne bi mi priličilo ako bih ušao u konačno oslobođenje, a da prethodno to ne najavim svojim pratiocima i monaškoj zajednici.",
   "dn16:2.23.5": "Kako bi bilo ako bih, svojom energijom umirivši bolove, još neko vreme produžio život?”",
-  "dn16:2.24.1": "Blaženi tako i učini."
+  "dn16:2.24.1": "Blaženi tako i učini.",
+  "dn16:2.24.2": "I bolovi u Blaženom se umiriše."
 }
