Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -460,5 +460,6 @@
   "dn16:2.23.5": "Kako bi bilo ako bih, svojom energijom umirivši bolove, još neko vreme produžio život?”",
   "dn16:2.24.1": "Blaženi tako i učini.",
   "dn16:2.24.2": "I bolovi u Blaženom se umiriše.",
-  "dn16:2.24.3": "Kada su se bolovi umirili, izašavši iz bolova, oporavivši se od bolesti, Blaženi izađe iz svog boravišta i sede na pripremljeno mesto u hladu."
+  "dn16:2.24.3": "Kada su se bolovi umirili, izašavši iz bolova, oporavivši se od bolesti, Blaženi izađe iz svog boravišta i sede na pripremljeno mesto u hladu.",
+  "dn16:2.24.4": "A Ānanda dođe do njega, pokloni mu se i sede sa strane. Dok je tako sedeo, reče on Blaženom:"
 }
