Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -462,5 +462,6 @@
   "dn16:2.24.2": "I bolovi u Blaženom se umiriše.",
   "dn16:2.24.3": "Kada su se bolovi umirili, izašavši iz bolova, oporavivši se od bolesti, Blaženi izađe iz svog boravišta i sede na pripremljeno mesto u hladu.",
   "dn16:2.24.4": "A Ānanda dođe do njega, pokloni mu se i sede sa strane. Dok je tako sedeo, reče on Blaženom:",
-  "dn16:2.24.5": "„Vidim, poštovani gospodine, da vam je bolje, vidim da možete da podnesete bolove. Ali isto tako vidim da je telo Blaženog slabo i iznureno. Zbog bolesti Blaženog ja sâm sam bio pometen, nisam jasno video stvari."
+  "dn16:2.24.5": "„Vidim, poštovani gospodine, da vam je bolje, vidim da možete da podnesete bolove. Ali isto tako vidim da je telo Blaženog slabo i iznureno. Zbog bolesti Blaženog ja sâm sam bio pometen, nisam jasno video stvari.",
+  "dn16:2.24.6": "Ali uteha mi beše da "
 }
