Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -464,5 +464,6 @@
   "dn16:2.24.4": "A Ānanda dođe do njega, pokloni mu se i sede sa strane. Dok je tako sedeo, reče on Blaženom:",
   "dn16:2.24.5": "„Vidim, poštovani gospodine, da vam je bolje, vidim da možete da podnesete bolove. Ali isto tako vidim da je telo Blaženog slabo i iznureno. Zbog bolesti Blaženog ja sâm sam bio pometen, nisam jasno video stvari.",
   "dn16:2.24.6": "Ali uteha mi beše da ",
-  "dn16:2.24.7": "Blaženi neće ući u konačno oslobođenje pre nego što se obrati monaškoj zajednici.”"
+  "dn16:2.24.7": "Blaženi neće ući u konačno oslobođenje pre nego što se obrati monaškoj zajednici.”",
+  "dn16:2.25.1": "„Ali šta to još, Ānanda, monaška zajednica očekuje od mene?"
 }
