Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -466,5 +466,6 @@
   "dn16:2.24.6": "Ali uteha mi beše da ",
   "dn16:2.24.7": "Blaženi neće ući u konačno oslobođenje pre nego što se obrati monaškoj zajednici.”",
   "dn16:2.25.1": "„Ali šta to još, Ānanda, monaška zajednica očekuje od mene?",
-  "dn16:2.25.2": "Ono što sam podučavao nisam delio na unutrašnje i spoljašnje."
+  "dn16:2.25.2": "Ono što sam podučavao nisam delio na unutrašnje i spoljašnje.",
+  "dn16:2.25.3": "Nema ničeg skrivenog što bi ostalo u učiteljevoj stisnutoj šaci."
 }
