Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -468,5 +468,6 @@
   "dn16:2.25.1": "„Ali šta to još, Ānanda, monaška zajednica očekuje od mene?",
   "dn16:2.25.2": "Ono što sam podučavao nisam delio na unutrašnje i spoljašnje.",
   "dn16:2.25.3": "Nema ničeg skrivenog što bi ostalo u učiteljevoj stisnutoj šaci.",
-  "dn16:2.25.4": "Isto tako, Ānanda, ko god bi pomislio ovako:"
+  "dn16:2.25.4": "Isto tako, Ānanda, ko god bi pomislio ovako:",
+  "dn16:2.25.5": "’Ja ću sada predvoditi monašku zajednicu’ ili ’Ja sam taj koji će davati uputstva monaškoj zajednici’, neka priča kako hoće."
 }
