Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -470,5 +470,6 @@
   "dn16:2.25.3": "Nema ničeg skrivenog što bi ostalo u učiteljevoj stisnutoj šaci.",
   "dn16:2.25.4": "Isto tako, Ānanda, ko god bi pomislio ovako:",
   "dn16:2.25.5": "’Ja ću sada predvoditi monašku zajednicu’ ili ’Ja sam taj koji će davati uputstva monaškoj zajednici’, neka priča kako hoće.",
-  "dn16:2.25.6": "Ali Tathāgata tako ne razmišlja"
+  "dn16:2.25.6": "Ali Tathāgata tako ne razmišlja",
+  "dn16:2.25.9": "Star sam Ānanda, vremešan, na leđima mi je breme godina, poodmakao sam stazom života i stigao do njenog poslednjeg dela:"
 }
