--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -472,5 +472,6 @@
   "dn16:2.25.5": "’Ja ću sada predvoditi monašku zajednicu’ ili ’Ja sam taj koji će davati uputstva monaškoj zajednici’, neka priča kako hoće.",
   "dn16:2.25.6": "Ali Tathāgata tako ne razmišlja",
   "dn16:2.25.9": "Star sam Ānanda, vremešan, na leđima mi je breme godina, poodmakao sam stazom života i stigao do njenog poslednjeg dela:",
-  "dn16:2.25.10": "osamdeset mi je godina."
+  "dn16:2.25.10": "osamdeset mi je godina.",
+  "dn16:2.25.11": "Baš kao što se stara, rasklimatana kola kotrljaju još samo zahvaljujući tome što su vezana jakim konopcima,"
 }
