Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -474,5 +474,6 @@
   "dn16:2.25.9": "Star sam Ānanda, vremešan, na leđima mi je breme godina, poodmakao sam stazom života i stigao do njenog poslednjeg dela:",
   "dn16:2.25.10": "osamdeset mi je godina.",
   "dn16:2.25.11": "Baš kao što se stara, rasklimatana kola kotrljaju još samo zahvaljujući tome što su vezana jakim konopcima,",
-  "dn16:2.25.12": "isto tako i moje telo nastavlja da se kreće samo zahvaljujući tome što kao da je vezano jakim konopcima, tako mi izgleda."
+  "dn16:2.25.12": "isto tako i moje telo nastavlja da se kreće samo zahvaljujući tome što kao da je vezano jakim konopcima, tako mi izgleda.",
+  "dn16:2.25.13": " Tek kada Tathāgata uđe u sabranost uma bez ikakvog posebnog znaka, neki osećaji prestanu da ga muče, zato što ne usmerava pažnju na bilo kakav znak. I tada je njegovom telu lakše."
 }
