--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -476,5 +476,5 @@
   "dn16:2.25.11": "Baš kao što se stara, rasklimatana kola kotrljaju još samo zahvaljujući tome što su vezana jakim konopcima,",
   "dn16:2.25.12": "isto tako i moje telo nastavlja da se kreće samo zahvaljujući tome što kao da je vezano jakim konopcima, tako mi izgleda.",
   "dn16:2.25.13": " Tek kada Tathāgata uđe u sabranost uma bez ikakvog posebnog znaka, neki osećaji prestanu da ga muče, zato što ne usmerava pažnju na bilo kakav znak. I tada je njegovom telu lakše.",
-  "dn16:2.26.1": "Zato, Ānanda, budi sam sebi svetlo, budi sam sebi utočište, neka niko drugi ne bude tvoje utočište."
+  "dn16:2.26.1": "Zato, Ānanda, budi sam sebi svetlo, budi sam sebi utočište, neka niko drugi ne bude tvoje utočište. Neka Dhamma bude tvoje svetlo, tvoje utočište, a ne neko drugi."
 }
