Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -479,5 +479,6 @@
   "dn16:2.26.1": "Zato, Ānanda, budi sam sebi svetlo, budi sam sebi utočište, a ne neko drugi. Neka Dhamma bude tvoje svetlo, tvoje utočište, a ne neko drugi.",
   "dn16:2.26.2": "A kako je to monah sam sebi svetlo, sam sebi utočište?",
   "dn16:2.26.3": "Tako, Ānanda, monah boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svestan, odloživši sa strane gramzivost i odbojnost prema ovom svetu…",
-  "dn16:2.26.4": "osećaje kao osećaje…"
+  "dn16:2.26.4": "osećaje kao osećaje…",
+  "dn16:2.26.5": "um kao um…"
 }
