--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -480,5 +480,6 @@
   "dn16:2.26.2": "A kako je to monah sam sebi svetlo, sam sebi utočište?",
   "dn16:2.26.3": "Tako, Ānanda, monah boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu…",
   "dn16:2.26.4": "osećaje kao osećaje…",
-  "dn16:2.26.5": "um kao um…"
+  "dn16:2.26.5": "um kao um…",
+  "dn16:2.26.6": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu."
 }
