--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -481,5 +481,6 @@
   "dn16:2.26.3": "Tako, Ānanda, monah boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu…",
   "dn16:2.26.4": "osećaje kao osećaje…",
   "dn16:2.26.5": "um kao um…",
-  "dn16:2.26.6": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu."
+  "dn16:2.26.6": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu.",
+  "dn16:2.26.7": "Na taj način, Ānanda, monah je sam sebi svetlo, sam sebi utočište, niko drugi nije njegovo utočište."
 }
