--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -486,5 +486,6 @@
   "dn16:2.26.8": "Koji god su monasi sada ili posle moje smrti sami svoje svetlo, sami svoje utočište, a ne bilo ko drugi, kojima je god Dhamma svetlo i utočite, ti će među mojim monasima iz mraka izaći na najveće svetlo, samo ako budu vežbali.",
   "dn16:3.1.0": "13. O Budinom nagoveštaju",
   "dn16:3.1.1": "Jednoga jutra Blaženi se obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa krenu put Vesālija da prosi hranu.",
-  "dn16:3.1.2": "Kad je prošao Vesāli i vratio se iz prošenja hrane, posle obroka, reče on poštovanom Ānandi:"
+  "dn16:3.1.2": "Kad je prošao Vesāli i vratio se iz prošenja hrane, posle obroka, reče on poštovanom Ānandi:",
+  "dn16:3.1.3": "„Ānanda, uzmi prostirke za sedenje,"
 }
