Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -487,5 +487,6 @@
   "dn16:3.1.0": "13. O Budinom nagoveštaju",
   "dn16:3.1.1": "Jednoga jutra Blaženi se obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa krenu put Vesālija da prosi hranu.",
   "dn16:3.1.2": "Kad je prošao Vesāli i vratio se iz prošenja hrane, posle obroka, reče on poštovanom Ānandi:",
-  "dn16:3.1.3": "„Ānanda, uzmi prostirke za sedenje,"
+  "dn16:3.1.3": "„Ānanda, uzmi prostirke za sedenje,",
+  "dn16:3.1.4": "pa hajdemo do Ćāpāla svetilišta, da tamo provedemo ostatak dana.”"
 }
