--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -489,5 +489,6 @@
   "dn16:3.1.2": "Kad je prošao Vesāli i vratio se iz prošenja hrane, posle obroka, reče on poštovanom Ānandi:",
   "dn16:3.1.3": "„Ānanda, uzmi prostirke za sedenje,",
   "dn16:3.1.4": "pa hajdemo do Ćāpāla svetilišta, da tamo provedemo ostatak dana.”",
-  "dn16:3.1.5": "„Da, poštovani gospodine,” odgovori Ānanda, uze prostirke, pa krenu za Blaženim, prateći ga u stopu."
+  "dn16:3.1.5": "„Da, poštovani gospodine,” odgovori Ānanda, uze prostirke, pa krenu za Blaženim, prateći ga u stopu.",
+  "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto."
 }
