--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -490,5 +490,6 @@
   "dn16:3.1.3": "„Ānanda, uzmi prostirke za sedenje,",
   "dn16:3.1.4": "pa hajdemo do Ćāpāla svetilišta, da tamo provedemo ostatak dana.”",
   "dn16:3.1.5": "„Da, poštovani gospodine,” odgovori Ānanda, uze prostirke, pa krenu za Blaženim, prateći ga u stopu.",
-  "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto."
+  "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto.",
+  "dn16:3.2.2": "A poštovani Ānanda se pokloni Blaženom, pa sede sa strane."
 }
