Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -491,5 +491,6 @@
   "dn16:3.1.4": "pa hajdemo do Ćāpāla svetilišta, da tamo provedemo ostatak dana.”",
   "dn16:3.1.5": "„Da, poštovani gospodine,” odgovori Ānanda, uze prostirke, pa krenu za Blaženim, prateći ga u stopu.",
   "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto.",
-  "dn16:3.2.2": "A poštovani Ānanda se pokloni Blaženom, pa sede sa strane."
+  "dn16:3.2.2": "A poštovani Ānanda se pokloni Blaženom, pa sede sa strane.",
+  "dn16:3.2.3": "Dok je tako sedeo, Blaženi mu reče:"
 }
