Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -492,5 +492,6 @@
   "dn16:3.1.5": "„Da, poštovani gospodine,” odgovori Ānanda, uze prostirke, pa krenu za Blaženim, prateći ga u stopu.",
   "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto.",
   "dn16:3.2.2": "A poštovani Ānanda se pokloni Blaženom, pa sede sa strane.",
-  "dn16:3.2.3": "Dok je tako sedeo, Blaženi mu reče:"
+  "dn16:3.2.3": "Dok je tako sedeo, Blaženi mu reče:",
+  "dn16:3.2.4": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište."
 }
