--- a/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "an5.192:4.4": "„Ja, Herr“, erwiderte Doṇa. ",
   "an5.192:4.5": "Der Buddha sagte: ",
   "an5.192:5.1": "„Doṇa, wie gleicht ein Brahmane Brahmā? ",
-  "an5.192:5.2": "Da ist ein Brahmane von guter Geburt auf mütterlicher und väterlicher Seite, er kommt aus einem reinen Schoß bis zur siebten väterlichen Generation zurück, unwiderlegbar und einwandfrei in Fragen der Abstammung. ",
+  "an5.192:5.2": "Da ist ein Brahmane von guter Geburt auf mütterlicher und väterlicher Seite, er kommt aus einem reinen Schoß bis zurück zur siebten väterlichen Generation, unwiderlegbar und einwandfrei in Fragen der Abstammung. ",
   "an5.192:5.4": "Achtundvierzig Jahre lang führt er das geistliche Leben eines Jungen und lernt die Hymnen. ",
   "an5.192:5.5": "Dann sucht er ein Entgelt für seinen Lehrer, doch nur auf rechtmäßige Weise, nicht auf unrechtmäßige. ",
   "an5.192:6.1": "Was, Doṇa, bedeutet rechtmäßig in diesem Zusammenhang? ",
