Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -493,5 +493,6 @@
   "dn16:3.2.1": "Kad je Blaženi stigao do svetilišta, sede on tamo na pripremljeno mesto.",
   "dn16:3.2.2": "A poštovani Ānanda se pokloni Blaženom, pa sede sa strane.",
   "dn16:3.2.3": "Dok je tako sedeo, Blaženi mu reče:",
-  "dn16:3.2.4": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište."
+  "dn16:3.2.4": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište.",
+  "dn16:3.3.1": "I svako ko je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći, načinio od njih sredstvo i osnovu, njima ovladao, osnažio ih i temeljno ih praktikovao, mogao bi, ako to poželi, da živi čitav eon ili ono što od njega još preostalo."
 }
