Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -166,5 +166,6 @@
   "mn93:18.45": "‚Aber wisst ihr, ",
   "mn93:18.46": "ob eure leibliche Mutter nur Beziehungen mit einem Brahmanen hatte und nicht jemandem, der kein Brahmane war?‘ ",
   "mn93:18.47": "‚Das wissen wir nicht.‘ ",
-  "mn93:18.48": "‚Aber wisst ihr, "
+  "mn93:18.48": "‚Aber wisst ihr, ",
+  "mn93:18.49": "ob die Mütter eurer leiblichen Mutter bis zurück zur siebten Generation nur Beziehungen mit einem Brahmanen hatte und nicht mit jemandem, der kein Brahmane war?‘ "
 }
