--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -168,5 +168,6 @@
   "mn93:18.47": "‚Das wissen wir nicht.‘ ",
   "mn93:18.48": "‚Aber wisst ihr, ",
   "mn93:18.49": "ob die Mütter eurer leiblichen Mutter bis zurück zur siebten Generation nur Beziehungen mit einem Brahmanen hatte und nicht mit jemandem, der kein Brahmane war?‘ ",
-  "mn93:18.50": "‚Das wissen wir nicht.‘ "
+  "mn93:18.50": "‚Das wissen wir nicht.‘ ",
+  "mn93:18.51": "‚Aber wisst ihr, "
 }
