--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -497,5 +497,6 @@
   "dn16:3.3.1": "I svako ko je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći, načinio od njih sredstvo i osnovu, njima ovladao, osnažio ih i temeljno ih praktikovao, mogao bi, ako to poželi, da živi čitav eon ili ono što od njega još preostalo.",
   "dn16:3.3.2": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći. Ukoliko poželi, on može da živi čitav eon ili ono što je od njega još preostalo.”",
   "dn16:3.4.1": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume.",
-  "dn16:3.4.2": "Tako nije zamolio Blaženog:"
+  "dn16:3.4.2": "Tako nije zamolio Blaženog:",
+  "dn16:3.4.3": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um."
 }
