--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -500,5 +500,6 @@
   "dn16:3.4.2": "Tako nije zamolio Blaženog:",
   "dn16:3.4.3": "„Poštovani gospodine, neka Blaženi poživi čitav eon, neka Srećni poživi čitav eon, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića”, slično nekome kome je Māra zaposeo um.",
   "dn16:3.5.1": "Po drugi put…",
-  "dn16:3.5.2": "Po treći put, Blaženi reče poštovanom Ānandi:"
+  "dn16:3.5.2": "Po treći put, Blaženi reče poštovanom Ānandi:",
+  "dn16:3.5.3": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište."
 }
