Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -170,5 +170,6 @@
   "mn93:18.49": "ob die Mütter eurer leiblichen Mutter bis zurück zur siebten Generation nur Beziehungen mit einem Brahmanen hatte und nicht mit jemandem, der kein Brahmane war?‘ ",
   "mn93:18.50": "‚Das wissen wir nicht.‘ ",
   "mn93:18.51": "‚Aber wisst ihr, ",
-  "mn93:18.52": "ob euer leiblicher Vater nur Beziehungen mit einer Brahmanin hatte und nicht mit einer Frau, die keine Brahmanin war?‘ "
+  "mn93:18.52": "ob euer leiblicher Vater nur Beziehungen mit einer Brahmanin hatte und nicht mit einer Frau, die keine Brahmanin war?‘ ",
+  "mn93:18.53": "‚Das wissen wir nicht.‘ "
 }
