Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -504,5 +504,6 @@
   "dn16:3.5.3": "„Divan je, Ānanda, Vesāli, divna su Udena, Gotamaka, Sattamba, Bahuputta i Sāradanda svetilišta, divno je Ćāpāla svetilište.",
   "dn16:3.5.4": "I svako ko je razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći, načinio od njih sredstvo i osnovu, njima ovladao, osnažio ih i temeljno ih praktikovao, mogao bi, ako to poželi, da živi čitav eon ili ono što od njega još preostalo.",
   "dn16:3.5.5": "Ānanda, Tathāgata je zaista razvijao, često vežbao, ovladao, temeljno praktikovao, održavao, uvećavao i na pravi način koristio četiri osnove duhovne moći. Ukoliko poželi, on može da živi čitav eon ili ono što je od njega još preostalo.”",
-  "dn16:3.5.6": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume."
+  "dn16:3.5.6": "Ali poštovani Ānanda, uprkos tome što je Blaženi načinio tako vidljiv znak, tako vidljivu sugestiju, nije bio u stanju da to razume.",
+  "dn16:3.5.7": "Tako nije zamolio Blaženog:"
 }
