Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -173,5 +173,6 @@
   "mn93:18.52": "ob euer leiblicher Vater nur Beziehungen mit einer Brahmanin hatte und nicht mit einer Frau, die keine Brahmanin war?‘ ",
   "mn93:18.53": "‚Das wissen wir nicht.‘ ",
   "mn93:18.54": "‚Aber wisst ihr, ",
+  "mn93:18.55": "ob die Väter eures leiblichen Vaters bis zurück zur siebten Generation nur Beziehungen mit einer Brahmanin hatten und nicht mit einer Frau, die keine Brahmanin war?‘ ",
   "mn93:19.3": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
