Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -179,5 +179,6 @@
   "mn93:18.58": "wie ein Embryo empfangen wird?‘ ",
   "mn93:18.59": "‚Das wissen wir, Herr. ",
   "mn93:18.61": "Ein Embryo wird empfangen, wenn diese drei Dinge zusammenkommen: Mutter und Vater kommen zusammen, die Mutter ist in der fruchtbaren Phase ihres Zyklus, und der männliche Geist ist zeugungsfähig.‘ ",
+  "mn93:18.62": "‚Aber wisst ihr sicher, ",
   "mn93:19.3": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
