--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -180,5 +180,7 @@
   "mn93:18.59": "‚Das wissen wir, Herr. ",
   "mn93:18.61": "Ein Embryo wird empfangen, wenn diese drei Dinge zusammenkommen: Mutter und Vater kommen zusammen, die Mutter ist in der fruchtbaren Phase ihres Zyklus, und der männliche Geist ist zeugungsfähig.‘ ",
   "mn93:18.62": "‚Aber wisst ihr sicher, ",
+  "mn93:18.63": "ob dieser männliche Geist ein Adliger, ein Brahmane, ein Kaufmann oder ein Arbeiter ist?‘",
+  "mn93:18.64": "‚Das wissen wir nicht.‘ ",
   "mn93:19.3": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
