Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -182,5 +182,7 @@
   "mn93:18.62": "‚Aber wisst ihr sicher, ",
   "mn93:18.63": "ob dieser männliche Geist ein Adliger, ein Brahmane, ein Kaufmann oder ein Arbeiter ist?‘",
   "mn93:18.64": "‚Das wissen wir nicht.‘ ",
+  "mn93:18.66": "‚In diesem Fall, ihr Herren, wisst ihr nicht, ",
+  "mn93:18.67": "was ihr seid?‘ ",
   "mn93:19.3": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
