Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -184,5 +184,8 @@
   "mn93:18.64": "‚Das wissen wir nicht.‘ ",
   "mn93:18.66": "‚In diesem Fall, ihr Herren, wisst ihr nicht, ",
   "mn93:18.67": "was ihr seid?‘ ",
+  "mn93:18.68": "‚In diesem Fall, Herr, wissen wir nicht, ",
+  "mn93:18.69": "was wir sind.‘ ",
+  "mn93:18.70": "So waren selbst diese sieben Eremiten überfragt, als Devala der Dunkle über ihre eigene Abstammungslehre auf sie eindrang, ihnen zusetzte und sie ins Kreuzverhör nahm. ",
   "mn93:19.3": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
