Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "dn27:3.11": "Das ist nicht richtig, es ist nicht recht!‘ ",
   "dn27:3.12": "So beleidigen uns die Brahmanen.“ ",
   "dn27:4.1": "„Vāseṭṭha, die Brahmanen vergessen tatsächlich ihre Überlieferung, wenn sie so zu euch sprechen. ",
-  "dn27:4.6": "Denn man sieht, dass Brahmaninnen ihre Monatsblutung haben, dass sie schwanger werden, Kinder gebären und stillen. ",
+  "dn27:4.6": "Denn man sieht, dass Brahmaninnen ihre Periode haben, dass sie schwanger werden, Kinder gebären und stillen. ",
   "dn27:4.7": "Doch obwohl sie aus dem Schoß einer Brahmanin geboren wurden, sagen die Brahmanen: ",
   "dn27:4.8": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
   "dn27:4.9": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
