Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn35.95:4.1": "„Was denkst du, Māluṅkyaputta? ",
   "sn35.95:4.2": "Hast du irgendein Sehnen oder Begehren oder eine Zuneigung zu Bildern, die das Auge erkennt, die du nicht gesehen noch jemals zuvor gesehen hast noch jetzt siehst noch von ihnen denkst, man könne sie sehen?“ ",
   "sn35.95:4.3": "„Nein, Herr.“ ",
-  "sn35.95:5.1": "Hast du irgendein Sehnen oder Begehren oder eine Zuneigung zu Tönen, die das Ohr erkennt … ",
+  "sn35.95:5.1": "„Hast du irgendein Sehnen oder Begehren oder eine Zuneigung zu Tönen, die das Ohr erkennt … ",
   "sn35.95:6.1": "zu Düften, die die Nase erkennt … ",
   "sn35.95:7.1": "zu Geschmäcken, die die Zunge erkennt … ",
   "sn35.95:8.1": "zu Berührungen, die der Körper erkennt … ",
