Translations by sujato to translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -48,7 +48,7 @@
   "an5.192:7.8": "Having offered the fee to his teacher, he seeks a wife, but only by legitimate means, not illegitimate. ",
   "an5.192:8.1": "In this context, Doṇa, what is legitimate? ",
   "an5.192:8.2": "Not by buying or selling, he only accepts a brahmin woman by the pouring of water. ",
-  "an5.192:8.3": "He has sex only with a brahmin woman. He does not have sex with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. Nor does he have sex with women who are pregnant, breastfeeding, or outside the fertile half of the month that starts with menstruation. ",
+  "an5.192:8.3": "He has sex only with a brahmin woman. He does not have sex with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. Nor does he have sex with women who are pregnant, breastfeeding, or outside the fertile phase of the menstrual cycle. ",
   "an5.192:8.4": "And why does the brahmin not have sex with a pregnant woman? ",
   "an5.192:8.5": "If a brahmin had sex with a pregnant woman, the boy or girl would be born in too much filth. ",
   "an5.192:8.6": "That’s why the brahmin doesn’t have sex with a pregnant woman. ",
