Translations by sujato to translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -55,7 +55,7 @@
   "an5.192:8.7": "And why does the brahmin not have sex with a breastfeeding woman? ",
   "an5.192:8.8": "If a brahmin had sex with a breastfeeding woman, the boy or girl would drink back the semen. ",
   "an5.192:8.9": "That’s why the brahmin doesn’t have sex with a breastfeeding woman. ",
-  "an5.192:8.10": "And why does the brahmin not have sex outside the fertile half of the month that starts with menstruation? Because his brahmin wife is not there for sensual pleasure, fun, and enjoyment, but only for procreation. ",
+  "an5.192:8.10": "And why does the brahmin not have sex outside the fertile phase of the menstrual cycle? Because his brahmin wife is not there for sensual pleasure, fun, and enjoyment, but only for procreation. ",
   "an5.192:8.11": "Having ensured his progeny through sex, he shaves off his hair and beard, dresses in ocher robes, and goes forth from the lay life to homelessness. ",
   "an5.192:8.12": "When he has gone forth, quite secluded from sensual pleasures, secluded from unskillful qualities, he enters and remains in the first absorption … second absorption … third absorption … fourth absorption. ",
   "an5.192:8.13": "Having developed these four absorptions, when the body breaks up, after death, they’re reborn in a good place, a heavenly realm. ",
