Translations by sujato to translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -90,7 +90,7 @@
   "an5.192:12.1": "",
   "an5.192:12.2": "",
   "an5.192:12.3": "Having offered a fee for his teacher, he seeks a wife by both legitimate and illegitimate means. That is, by buying or selling, as well as accepting a brahmin woman by the pouring of water. ",
-  "an5.192:12.4": "He has sex with a brahmin woman, as well as with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. And he has sex with women who are pregnant, breastfeeding, or outside the fertile half of the month that starts with menstruation. ",
+  "an5.192:12.4": "He has sex with a brahmin woman, as well as with a woman from a caste of aristocrats, merchants, workers, outcastes, hunters, bamboo workers, chariot-makers, or waste-collectors. And he has sex with women who are pregnant, breastfeeding, or outside the fertile phase of the menstrual cycle. ",
   "an5.192:12.5": "His brahmin wife is there for sensual pleasure, fun, and enjoyment, as well as for procreation. ",
   "an5.192:12.6": "As far as the line of the ancient brahmins extends, he crosses over it. ",
   "an5.192:12.7": "That’s why he’s called a brahmin who crosses the line. ",
